fixed img spacing issue in a phone size screen

--- a/MainInterface.css
+++ b/MainInterface.css
@@ -346,7 +346,7 @@ hr{
 
 .projectOneInfo img{
     width: 100%;
-    min-width: 400px;
+    /* min-width: 400px; */
     max-width: none;
     object-fit: cover;
     border-radius: 5px; 
